Fixed list image distortion

--- a/frontend/legal-service-app/src/assets/css/style.css
+++ b/frontend/legal-service-app/src/assets/css/style.css
@@ -7536,3 +7536,7 @@ min-width: 100%;
 		left: -221px;
 	}
 }
+
+.img-fluid{
+    height: -webkit-fill-available;
+}
